[package]
name = "fogbugz-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["leaky-bucket"]
leaky-bucket = ["dep:cfg-if", "dep:leaky-bucket"]

[dependencies]
reqwest = { version = "0.11.20", default-features = false, features = [
  "json",
  "rustls",
  "rustls-tls",
] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
thiserror = "1.0.43"
cfg-if = { version = "1.0.0", optional = true }
leaky-bucket = { version = "1.0.1", optional = true }
async-trait = "0.1.72"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
url = "2.5.0"
strum = { version = "0.25.0", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
derivative = "2.2.0"
